Me falta poner una animacion hasta que cargue la lista. falta darle la funcion de hacer pedidos y generar un pdf con el presupuesto.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="precio">Nuevo Precio</string>
     <string name="categoria">Nueva Categoria</string>
     <string name="marca">Nueva Marca</string>
+    <string name="salir_editar">Precione aquí para \n aplicar los cambios</string>
 
 
 </resources>
